fix scroll issues on mobile

--- a/style.css
+++ b/style.css
@@ -21,31 +21,34 @@
 
 body {
   overflow: hidden;
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+.site-holder {
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
 }
 
 #page-one {
   background-color: #9a454d;
 }
 
-#page-two,
-#page-three,
-#page-four {
-  background-color: white;
-}
-
-#page-three {
-}
-
-#page-four {
-}
-
 .main-container {
   height: 100vh;
   width: 100%;
   position: absolute;
-  right: 00%;
+  right: 0px;
   display: flex;
   transition: all .75s linear;
+  /* flex-direction: column; */
 }
 
 .container {
@@ -55,7 +58,7 @@ body {
 }
 
 .inner-container {
-  /* padding-top: 67px; */
+  min-width: 100%;
   width: 100%;
   height: 100vh;
   overflow: auto;
@@ -253,3 +256,36 @@ a {
   width: 60%;
   margin-left: 15px;
 }
+
+/* NOTE: contact page */
+
+.contact-container a {
+  color: #9a454d;
+  display: block;
+  text-align: left;
+  padding-left: 25px;
+  font-size: 40px;
+}
+
+
+
+/* @media (max-width:400px) {
+  .main-container {
+    flex-direction: column;
+    height: auto;
+  }
+
+  body {
+    overflow: auto;
+  }
+
+  .inner-container {
+    overflow: auto;
+    height: auto;
+  }
+
+  nav {
+    display: none;
+  }
+
+} */
